--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mkns</title>
+    <style>
+        body {
+            background-color:antiquewhite;
+            font-family:Helvetica;
+        }
+        span.white{
+            color:antiquewhite;
+        }
+    </style>
 </head>
 <body>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis error nesciunt reiciendis neque sint dolorem magni, quidem at repudiandae, sequi deleniti nulla natus ad sunt. Officia delectus assumenda doloribus esse!</p>
+    <h1>Greetings, universe!</h1>
+    <p>-><span class="white">miss ko na siya</span></p>
 </body>
 </html>
