--- a/index.html
+++ b/index.html
@@ -12,10 +12,15 @@
         span.white{
             color:antiquewhite;
         }
+        h1{
+            text-align:center;
+        }
     </style>
 </head>
 <body>
+    <hr>
     <h1>Greetings, universe!</h1>
+    <hr>
     <p>-><span class="white">miss ko na siya</span></p>
 </body>
 </html>
