--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             animation-name: example;
             animation-duration: 2s;
             animation-iteration-count: infinite;
-            width:100%;
-            height:20%;
+            width:30%;
+            margin:auto;
+            height:30%;
         }
         @keyframes example {
             0%   {background-color: red;}
