--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             animation-iteration-count: infinite;
             width:30%;
             margin:auto;
+            min-height:30%;
             height:30%;
         }
         @keyframes example {
