--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
             animation-name: example;
             animation-duration: 2s;
             animation-iteration-count: infinite;
-            width:30%;
+            width:30vw;
             margin:auto;
-            min-height:30%;
-            height:30%;
+            display:block;
+            min-height:30vw;
+            height:30vw;
         }
         @keyframes example {
             0%   {background-color: red;}
@@ -37,7 +38,7 @@
             animation-name: example2;
             animation-duration: 2s;
             animation-iteration-count: infinite;
-            animation-delay: 0.06s;
+            animation-delay: 0.03s;
             text-align:center;
         }
         @keyframes example2 {
