--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         #color {
             animation-name: example;
             animation-duration: 2s;
+            animation-timing-function: linear;
             animation-iteration-count: infinite;
             width:30vw;
             margin:auto;
@@ -38,7 +39,8 @@
             animation-name: example2;
             animation-duration: 2s;
             animation-iteration-count: infinite;
-            animation-delay: 0.03s;
+            animation-timing-function: linear;
+            animation-delay: 0.05s;
             text-align:center;
         }
         @keyframes example2 {
