--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
             100% {background-color: red;}
         }
         .imy {
+            color:green;
             animation-name: example2;
             animation-duration: 2s;
             animation-iteration-count: infinite;
             animation-timing-function: linear;
-            animation-delay: 0.05s;
+            animation-delay: 1s;
             text-align:center;
+            vertical-align: middle;
+            font-size: 100px;
         }
         @keyframes example2 {
             0%   {color: red;}
