--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             display:block;
             min-height:30vw;
             height:30vw;
+            padding:auto;
+            position: relative;
         }
         @keyframes example {
             0%   {background-color: red;}
@@ -43,8 +45,12 @@
             animation-timing-function: linear;
             animation-delay: 1s;
             text-align:center;
-            vertical-align: middle;
             font-size: 100px;
+            margin: 0;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
         }
         @keyframes example2 {
             0%   {color: red;}
