--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             position: relative;
         }
         @keyframes example {
-            0%   {background-color: red;}
-            16%  {background-color: orange;}
-            33%  {background-color: yellow;}
-            50%  {background-color: green;}
-            66%  {background-color: blue;}
-            84%  {background-color: purple;}
-            100% {background-color: red;}
+            0%   {background-color: red; transform:rotate(0deg); }
+            16%  {background-color: orange; transform:rotate(57.5984deg);}
+            33%  {background-color: yellow; transform:rotate(118.7967deg);}
+            50%  {background-color: green; transform:rotate(179.995deg);}
+            66%  {background-color: blue; transform:rotate(237.5934deg);}
+            84%  {background-color: purple; transform:rotate(302.3916deg);}
+            100% {background-color: red; transform:rotate(359.99deg);}
         }
         .imy {
             animation-name: example2;
