--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
             animation-duration: 2s;
             animation-timing-function: linear;
             animation-iteration-count: infinite;
+            margin:0;
+            margin-top:8px;
         }
         span.white {
             color:antiquewhite;
@@ -28,12 +30,12 @@
             margin:auto;
             width: 400px;
             display:block;
-            border-width: 3px;
-            border-color:black;
+            border-width: 0;
             border-style: solid;
             border-radius: 10px;
             background-color:#00000022;
         }
+
         figcaption {
             text-align:center;
             animation-name: example2;
@@ -49,6 +51,8 @@
             display:block;
         }
         p {
+            margin:0;
+            padding:0;
             text-align:center;
             animation-name: example2;
             animation-duration: 2s;
@@ -58,20 +62,45 @@
             font-family:"Bahnschrift Condensed";
             font-weight:lighter;
             font-size:24px;
-            margin:auto;
-            width: 30%;
+            margin:0px;
             display:inline-block;
-            border-width: 3px;
-            border-color:black;
+            border-width: 0px;
             border-style: solid;
             border-radius: 5px;
             background-color:#00000022;
+            width:100%;
         }
-        div {
-            display:inline;
-            padding:1.3%;
-            width:30%;
+        p, h1, img {
+            transition-property: border-width;
+            transition-duration: 0.1s;
+        }
+        p:hover, h1:hover, img:hover {
+            border-width: 3px;
+
+        }
+        div.a {
+            display:inline-block;
+            margin:0;
+            padding:0;
+            width:32.3333%;
             vertical-align:top;
+            position:absolute;
+        }
+        div.a:first-child {
+            left:0;
+        }
+        div.a:nth-child(2) {
+            left:33.3333%;
+        }
+        div.a:last-child {
+            left:66.6667%;
+        }
+        div#b {
+            margin:auto;
+            padding:0;
+            display:block;
+            position:relative;
+            width:99%
         }
         
         /* #color {
@@ -126,10 +155,9 @@
             animation-timing-function: linear;
             animation-delay: -1s;
             margin:auto;
-            margin-top:50px;
+            margin-top:30px;
             display:block;
-            border-width: 3px;
-            border-color:black;
+            border-width: 0;
             border-style: solid;
             border-radius: 10px;
             background-color:#00000022;
@@ -151,9 +179,11 @@
     <img src="image.gif" alt="Last brain cell">
     <figcaption>This image represents the remaining population of neuron(s) in my brain</figcaption>
     <br>
-    <div><p><span>FUN FACT</span><br>i got a 1.25 in math because of sir trex (i always get 1.00)<br><br><span id="imy">miss ko na siya</span></p></div>
-    <div><p><span>HOBBIES</span><br>music production, roblox game dev, japanese こんにちは<br>0.01平方メートルの空間をファンクショナルな家に変えましょう。リトル・ジョンさんは10年に働いていました。自分の家のために1億円を貯めりました。それでも、買えた空間は0.01平方メートルだけです。だから、このようにレインストールしました。最初に、ギャルバナイズド・スクウェアー・スティールを使いますから外にフレームを作ります。おばさんからネジを借りれます。エコ・フレンドリー・ウード・ヴェニアーとフレームをかぶせります。</p></div>
-    <div><p><span>INTERESTS</span><br>siya (game dev, astronomy)</p></div>
+    <div id="b">
+        <div class = "a"><p><span>FUN FACT</span><br>i got a 1.25 in math because of sir trex (i always get 1.00)<br><br><span id="imy">miss ko na siya</span></p></div>
+        <div class = "a"><p><span>HOBBIES</span><br>music production, roblox game dev, japanese こんにちは<br>0.01平方メートルの空間をファンクショナルな家に変えましょう。リトル・ジョンさんは10年に働いていました。自分の家のために1億円を貯めりました。それでも、買えた空間は0.01平方メートルだけです。だから、このようにレインストールしました。最初に、ギャルバナイズド・スクウェアー・スティールを使いますから外にフレームを作ります。おばさんからネジを借りれます。エコ・フレンドリー・ウード・ヴェニアーとフレームをかぶせります。</p></div>
+        <div class = "a"><p><span>INTERESTS</span><br>siya (game dev, astronomy)</p></div>
+    </div>
     <!-- <p>-><span class="white">miss ko na siya</span></p> -->
     <!-- <div id="color"><p class="imy">miss ko na siya</p></div> -->
 </body>
