--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mkns</title>
     <style>
+        @font-face {
+            font-family: "Bahnschrift";
+            src: url(bahnschrift.ttf);
+        }
         body {
             background-color:antiquewhite;
             animation-name: example;
