--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             animation-iteration-count: infinite;
             animation-timing-function: linear;
             animation-delay: -1s;
-            font-family:"Bahnschrift Condensed";
+            font-family:"Bahnschrift";
+            font-stretch:condensed;
             font-weight:lighter;
             font-size:64px;
             margin:auto;
@@ -63,7 +64,8 @@
             animation-iteration-count: infinite;
             animation-timing-function: linear;
             animation-delay: -1s;
-            font-family:"Bahnschrift Condensed";
+            font-family:"Bahnschrift";
+            font-stretch:semi-condensed;
             font-weight:lighter;
             font-size:24px;
             margin:0px;
