--- a/index.html
+++ b/index.html
@@ -1,196 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mkns</title>
-    <style>
-        @font-face {
-            font-family: "Bahnschrift";
-            src: url(bahnschrift.ttf);
-        }
-        body {
-            background-color:antiquewhite;
-            animation-name: example;
-            animation-duration: 2s;
-            animation-timing-function: linear;
-            animation-iteration-count: infinite;
-            margin:0;
-            margin-top:8px;
-        }
-        span.white {
-            color:antiquewhite;
-        }
-        h1 {
-            text-align:center;
-            animation-name: example2;
-            animation-duration: 2s;
-            animation-iteration-count: infinite;
-            animation-timing-function: linear;
-            animation-delay: -1s;
-            font-family:"Bahnschrift";
-            font-stretch:condensed;
-            font-weight:lighter;
-            font-size:64px;
-            margin:auto;
-            width: 400px;
-            display:block;
-            border-width: 0;
-            border-style: solid;
-            border-radius: 10px;
-            background-color:#00000022;
-        }
-
-        figcaption {
-            text-align:center;
-            animation-name: example2;
-            animation-duration: 2s;
-            animation-iteration-count: infinite;
-            animation-timing-function: linear;
-            animation-delay: -1s;
-            font-family:"Bahnschrift";
-            font-weight:lighter;
-            font-size:16px;
-            margin:auto;
-            margin-top:10px;
-            display:block;
-        }
-        p {
-            margin:0;
-            padding:0;
-            text-align:center;
-            animation-name: example2;
-            animation-duration: 2s;
-            animation-iteration-count: infinite;
-            animation-timing-function: linear;
-            animation-delay: -1s;
-            font-family:"Bahnschrift";
-            font-stretch:semi-condensed;
-            font-weight:lighter;
-            font-size:24px;
-            margin:0px;
-            display:inline-block;
-            border-width: 0px;
-            border-style: solid;
-            border-radius: 5px;
-            background-color:#00000022;
-            width:100%;
-        }
-        p, h1, img {
-            transition-property: border-width;
-            transition-duration: 0.1s;
-        }
-        p:hover, h1:hover, img:hover {
-            border-width: 3px;
-
-        }
-        div.a {
-            display:inline-block;
-            margin:0;
-            padding:0;
-            width:32.3333%;
-            vertical-align:top;
-            position:absolute;
-        }
-        div.a:first-child {
-            left:0;
-        }
-        div.a:nth-child(2) {
-            left:33.3333%;
-        }
-        div.a:last-child {
-            left:66.6667%;
-        }
-        div#b {
-            margin:auto;
-            padding:0;
-            display:block;
-            position:relative;
-            width:99%
-        }
-        
-        /* #color {
-            animation-name: example;
-            animation-duration: 2s;
-            animation-timing-function: linear;
-            animation-iteration-count: infinite;
-            width:30vw;
-            margin:auto;
-            display:block;
-            min-height:30vw;
-            height:30vw;
-            padding:auto;
-            position: relative;
-        } */
-        @keyframes example {
-            0%   {background-color: red; }
-            16%  {background-color: orange;}
-            33%  {background-color: yellow;}
-            50%  {background-color: green; }
-            66%  {background-color: blue; }
-            84%  {background-color: purple;}
-            100% {background-color: red; }
-        }
-        /* .imy {
-            animation-name: example2;
-            animation-duration: 2s;
-            animation-iteration-count: infinite;
-            animation-timing-function: linear;
-            animation-delay: -1s;
-            text-align:center;
-            font-size: 30px;
-            margin: 0;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        } */
-        @keyframes example2 {
-            0%   {color: red;border-color: red;}
-            16%  {color: orange;border-color: orange;}
-            33%  {color: yellow;border-color: yellow;}
-            50%  {color: green;border-color: green;}
-            66%  {color: blue;border-color: blue;}
-            84%  {color: purple;border-color: purple;}
-            100% {color: red;border-color: red;}
-        }
-        img{
-            animation-name: example2;
-            animation-duration: 2s;
-            animation-iteration-count: infinite;
-            animation-timing-function: linear;
-            animation-delay: -1s;
-            margin:auto;
-            margin-top:30px;
-            display:block;
-            border-width: 0;
-            border-style: solid;
-            border-radius: 10px;
-            background-color:#00000022;
-        }
-        span{
-            font-weight:bold;
-        }
-        span#imy{
-            font-weight:bold;
-            animation-name: example2;
-            animation-duration: 2s;
-            animation-timing-function: linear;
-            animation-iteration-count: infinite;
-        }
-    </style>
-</head>
-<body>
-    <h1>OSRIC PAMAN</h1>
-    <img src="image.gif" alt="Last brain cell">
-    <figcaption>This image represents the remaining population of neuron(s) in my brain</figcaption>
-    <br>
-    <div id="b">
-        <div class = "a"><p><span>FUN FACT</span><br>i got a 1.25 in math because of sir trex (i always get 1.00)<br><br><span id="imy">miss ko na siya</span></p></div>
-        <div class = "a"><p><span>HOBBIES</span><br>music production, roblox game dev, japanese こんにちは<br>0.01平方メートルの空間をファンクショナルな家に変えましょう。リトル・ジョンさんは10年に働いていました。自分の家のために1億円を貯めりました。それでも、買えた空間は0.01平方メートルだけです。だから、このようにレインストールしました。最初に、ギャルバナイズド・スクウェアー・スティールを使いますから外にフレームを作ります。おばさんからネジを借りれます。エコ・フレンドリー・ウード・ヴェニアーとフレームをかぶせります。</p></div>
-        <div class = "a"><p><span>INTERESTS</span><br>siya (game dev, astronomy)</p></div>
-    </div>
-    <!-- <p>-><span class="white">miss ko na siya</span></p> -->
-    <!-- <div id="color"><p class="imy">miss ko na siya</p></div> -->
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
